# credit-risk-model

./: .coverage  .dockerignore  .flake8  .gitignore  DASHBOARD_SETUP.md  Dockerfile  QUICK_START.md  README.md  build.sh  create_shap_plots.py  debug_shap.py  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.sh  start_dashboard.bat
.github/workflows/: ci.yml
dashboard/: README.md  app.py
notebooks/: eda.ipynb  modeling_shap.ipynb
src/: data_processing.py  target_engineering.py  test_validation.py  train.py  woe_transformer.py
src/api/: main.py  pydantic_models.py  simplified_models.py
tests/: conftest.py  test_api.py  test_basic.py  test_features.py  test_model.py  test_models.py  test_train.py
